--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,4 +2,7 @@ $backgroundColor: burlywood;
 $titleColor: crimson;
 $TextColorOne: darkorchid;
 $TextColortwo: green;
+$TextColorFour: blue;
+$TextColorFive: brown;
+
 
