--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,5 @@
 @use 'sections';
+@use 'mixin';
 @import 'variables';
 
 body{
@@ -10,6 +11,7 @@ body{
         h1{
             font-style: italic;
             text-align: center;
+            text-decoration: underline;
         }
     }
 }
